apps/web/src/app/(docs)/docs/sdk-reference/cli/v1.0.1/sandbox/page.mdx
## vdesk sandbox


work with sandboxes

### Usage

```bash
vdesk sandbox [options] [command]
```
## vdesk sandbox connect


connect terminal to already running sandbox

### Usage

```bash
vdesk sandbox connect [options] <sandboxID>
```


## vdesk sandbox list


list all running sandboxes

### Usage

```bash
vdesk sandbox list [options]
```


## vdesk sandbox kill


kill sandbox

### Usage

```bash
vdesk sandbox kill [options] [sandboxID]
```

### Options


 - `-a, --all: kill all running sandboxes `


## vdesk sandbox spawn


spawn sandbox and connect terminal to it

### Usage

```bash
vdesk sandbox spawn [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESK config toml. By default VDESK tries to find ./vdesk.toml in root directory. `


## vdesk sandbox logs


show logs for sandbox

### Usage

```bash
vdesk sandbox logs [options] <sandboxID>
```

### Options


 - `--level <level>: filter logs by level (DEBUG, INFO, WARN, ERROR). The logs with the higher levels will be also shown. [default: INFO]`
 - `-f, --follow: keep streaming logs until the sandbox is closed `
 - `--format <format>: specify format for printing logs (json, pretty) [default: pretty]`
 - `--loggers [loggers]: filter logs by loggers. Specify multiple loggers by separating them with a comma. `


